| Bug #66235 | MySQL_ResultSet::getString() returns bad value for BIT data | ||
|---|---|---|---|
| Submitted: | 7 Aug 2012 3:56 | Modified: | 2 Feb 2015 16:26 |
| Reporter: | Alfredo Kojima | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | Connector / C++ | Severity: | S3 (Non-critical) |
| Version: | 1.1.0 | OS: | Any |
| Assigned to: | Hemant Dangi | CPU Architecture: | Any |
[7 Aug 2012 3:56]
Alfredo Kojima
[23 Apr 2013 21:13]
Lawrenty Novitsky
btw, should really getString for bit field return '0' or '1'? what for bit(n>1) fields? ...
[23 Jan 2015 9:22]
Hemant Dangi
Conversion in getString() and getInt() from bit to integer can be skipped, in case of aggregate functions (MAX() here) as they are already returning values as unsigned binary. Committed revision 1024 in C/C++ 1.1.6.
[2 Feb 2015 16:26]
Paul DuBois
Noted in 1.1.6 changelog. For queries of the form SELECT MAX(bit_col) FROM table_with_bit_col, getString() returned an incorrect result.
