Bug#66235: MySQL_ResultSet::getString() returns bad value for BIT data